<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="#f1f3de">

    <TextView
        android:id="@+id/textView_descriptionResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="#f1f3de"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Description"
        android:textColor="#00ff00"
        android:textSize="40sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20sp"
        app:layout_constraintVertical_bias="0.2"
        />

    <TextView
        android:id="@+id/textView_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20sp"

        android:fontFamily="sans-serif-thin"
        android:text="Description"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_descriptionResult"
        android:layout_marginTop="50dp"
        app:layout_constraintHorizontal_bias="0.9"
        />

    <TextView
        android:id="@+id/textView_Sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-thin"
        android:text="Description"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_age"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.9"
        />


    <TextView
        android:id="@+id/textView_agetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:fontFamily="sans-serif-thin"
        android:layout_marginEnd="20sp"
        android:text="@string/age"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_descriptionResult"
        android:layout_marginTop="50dp"
        app:layout_constraintHorizontal_bias="0.1"
        />

    <TextView
        android:id="@+id/textView_Sextext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-thin"
        android:text="@string/sex"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_age"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.1"
        />


    <TextView
        android:id="@+id/textView_dexcription1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="cursive"
        android:text="Description"
        android:textSize="22sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_Sex"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:text="@string/contact"

        app:layout_constraintTop_toBottomOf="@id/textView_dexcription1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>